# ScholarAI-Backend-FastAPI

./: .dockerignore  .env.example  .gitignore  B2_INTEGRATION_README.md  Dockerfile  PAPERCALL_SOURCES_STATUS.md  README.md  commands.txt  comprehensive_test.py  debug_gap_elimination.py  debug_test.py  docker-compose.yml  docker.sh  env.example  integration_test.py  issues.txt  migrate_gap_analysis.py  pyproject.toml  pytest.ini  quick_test.py  quick_test_output.json  sample_output.json  simple_test.py  test_all_api_clients.py  test_api_endpoint.py  test_api_key_issue.py  test_api_output.json  test_b2_gap_analysis.py  test_current_websearch.py  test_endpoints.py  test_enrichment_debug.py  test_fallback_templates.py  test_full_gap_analysis.py  test_gap_analysis_flow.py  test_gap_analysis_state_reset.py  test_gap_analyzer.py  test_gemini_websearch.py  test_job_loading.py  test_jobs_endpoint.py  test_light_mode_performance.py  (+3 more)
.github/workflows/: deploy.yml  vm-cicd.yml
app/: consumer_runner.py  main.py  migrate_gap_analysis.py
app/api/: router.py
app/core/: config.py  logging_config.py
app/db/: database.py
app/graph/: config.py
app/models/: graph.py  message.py
app/services/: README.md  b2_storage.py  echo_service.py  pdf_collector.py  pdf_processor.py  rabbitmq_consumer.py  summarization_agent.py  websearch_agent.py
app/utils/: helpers.py
docker/: Dockerfile  README.md  docker-compose.yml
docs/: 2_Setup_Instructions.md  4_Communication_Architecture.md  FRONTEND_SSE.md  INSTRUCTIONS.md  JOB_RECOVERY_SUMMARY.md  LANGGRAPH_MIGRATION_PLAN.md  PERSISTENT_JOB_STORAGE.md  TASKS.md  paper_entity_structure.md
gap_analysis_jobs/: job_1a829a40-1c5c-46d1-8047-1dd3f7ddeb5b.json  job_5cc4fabe-b4fd-471e-b7ff-da448e0fc67a.json  job_8c7c4590-7810-4964-8c5f-e0abb8dfa68a.json  job_a366f517-d557-4ce6-b3d7-4a04c9224245.json  job_eba7a363-7832-4a9c-a15d-126a8cbb7251.json  job_f4047af8-fb87-4f61-b49f-0e161875668e.json
gap_analysis_results/: gap_analysis_1a829a40-1c5c-46d1-8047-1dd3f7ddeb5b_1753608192.json  gap_analysis_5cc4fabe-b4fd-471e-b7ff-da448e0fc67a_1753602341.json  gap_analysis_62cfcbe9-b54c-4c34-8486-191a770265f7_1753555610.json  gap_analysis_8c7c4590-7810-4964-8c5f-e0abb8dfa68a_1753597742.json  gap_analysis_a366f517-d557-4ce6-b3d7-4a04c9224245_1753602362.json  gap_analysis_a59494eb-05e5-4f8f-bd99-a01a031a4377_1753555064.json  gap_analysis_a73974b1-77c9-4f5f-9592-435fa0fa4b37_1753595950.json  gap_analysis_dd920507-4aaf-450f-a4a6-da11ca649919_1753554820.json  gap_analysis_eba7a363-7832-4a9c-a15d-126a8cbb7251_1753553198.json  gap_analysis_fba959ff-487b-4108-9fcb-cd807316ad77_1753600873.json
scripts/: azure-setup.sh  docker.sh
tests/: __init__.py  start_server.py  test_all_api_clients.py  test_api_clients_health.py  test_b2_integration.py  test_basic_websearch.py  test_current_websearch.py  test_enhanced_pdf_collection.py  test_enhanced_search.py  test_extraction_agent.py  test_unpaywall.py  test_websearch.py
tests/langgraph/: test_auth_optional.py  test_checkpoint.py  test_event_mapping.py  test_event_sanitization.py  test_gap_graph.py  (+3 more)
(+104 files in other folders)
