[tool.poetry]
name = "scholar-ai"
version = "0.1.0"
description = "your ai research assistant, mentor and copilot"
authors = ["Tasriad Ahmed Tias <trisn.eclipse@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
pydantic = "^2.11.3"
aio-pika = "^9.4.3"
pika = "^1.3.2"
python-dotenv = "^1.1.0"
# Enhanced WebSearch Agent Dependencies
httpx = "^0.27.0"
aiohttp = "^3.9.1"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"
PyPDF2 = "^3.0.1"
pdfplumber = "^0.10.0"
google-generativeai = "^0.8.3"
numpy = "^1.24.3"
pandas = "^2.1.4"
networkx = "^3.2.1"
python-dateutil = "^2.8.2"
tenacity = "^8.2.3"
ratelimit = "^2.2.1"
xmltodict = "^0.13.0"
feedparser = "^6.0.10"
crossref-commons = "^0.0.7"
pytest-asyncio = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

